# POGS

./: .gitignore  .gitmodules  README.md  README_scene_capture.md  pyproject.toml
pogs/: pogs.py  pogs_config.py  pogs_pipeline.py
pogs/calibration_outputs/: world_to_extrinsic_zed.tf  world_to_extrinsic_zed_for_grasping_down.tf  wrist_to_zed_mini.tf
pogs/camera/: capture_utils.py  zed_stereo.py
pogs/configs/: base_config.py  camera_config.yaml
pogs/data/: full_images_datamanager.py
pogs/data/utils/: dino_dataloader.py  feature_dataloader.py  pyramid_embedding_dataloader.py
pogs/encoders/: image_encoder.py  openclip_encoder.py
pogs/fields/: gaussian_field.py
pogs/grasping/: generate_grasps_ply.py
pogs/grasping/results/: predictions_global.ply.npz
pogs/scripts/: calibrate_cameras.py  scene_capture.py  track_main_demo.py  track_main_online_demo.py
pogs/tracking/: motion.py  observation.py  optim.py  rigid_group_optimizer.py  toad_object.py  tri_zed.py  utils.py  zed.py
pogs/tracking/data/calibration_outputs/: world_to_extrinsic_zed.tf  world_to_extrinsic_zed_for_grasping_forward.tf  world_to_final_mini.tf  wrist_to_ZM.tf  wrist_to_cam.tf  wrist_to_zed_mini.tf  wrist_to_zed_mini_good.tf
pogs/tracking/transforms/: _so3.py
pogs/tracking/transforms/utils/: _utils.py
scripts/: dino_pca_visualization.py
src/pogs/: pogs_config.py  pogs_pipeline.py
src/pogs/calibration_outputs/: world_to_d405.tf  wrist_to_d435.tf
src/pogs/configs/: camera_config.yaml  conda_compile_pointnet_tfops.sh
src/pogs/contact_graspnet_wrapper/: prime_inference.py  prime_visualization_utils.py
src/pogs/data/: depth_dataset.py  full_images_datamanager.py
src/pogs/data/utils/: detic_dataloader.py  dino_extractor.py  patch_embedding_dataloader.py
src/pogs/data/utils/datasets/box/: camera_intrinsics.intr  table_bounding_cube.json  transforms.json
src/pogs/data/utils/datasets/box/poses/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt
src/pogs/dependencies/contact_graspnet/pointnet2/tf_ops/sampling/: 1.pkl
src/pogs/field_components/: gaussian_fieldheadnames.py
src/pogs/model_components/: losses.py
src/pogs/scripts/: calibrate_cameras.py  scene_capture.py  track_main_demo.py
src/pogs/tracking/: atap_loss.py  optim.py  toad_object.py  tri_zed.py  utils2.py
src/pogs/tracking/transforms/: __init__.py  _base.py  _se3.py
src/pogs/tracking/transforms/utils/: __init__.py
